fix: remove linebreaks in words

--- a/docs/theme/static/styles.css
+++ b/docs/theme/static/styles.css
@@ -85,7 +85,6 @@ a:hover {
 /* ── Prose ──────────────────────────────────────────────────────────────── */
 .prose {
   overflow-wrap: break-word;
-  word-break: break-word;
 }
 
 .prose h1,
